--- a/threejs/threejs02-light.html
+++ b/threejs/threejs02-light.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Three.js - Fundamentals with animation</title>
+    <title>Three.js - Fundamentals with light</title>
   </head>
   <body>
     <canvas id="c"></canvas>
@@ -25,15 +25,22 @@ function main() {
 
   const scene = new THREE.Scene();
 
+  {
+    const color = 0xFFFFFF;
+    const intensity = 1;
+    const light = new THREE.DirectionalLight(color, intensity);
+    light.position.set(1, 2, 4);
+    scene.add(light);
+  }
+
   const boxWidth = 1;
   const boxHeight = 1;
   const boxDepth = 1;
   const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
 
-  const material = new THREE.MeshBasicMaterial({color: 0x44aa88});  // greenish blue
+  const material = new THREE.MeshPhongMaterial({color: 0x44aa88});  // greenish blue
 
   const cube = new THREE.Mesh(geometry, material);
-  cube.position.x = -1;
   scene.add(cube);
 
   function render(time) {
